<resources>
    <string name="app_name">FirstAidLearning</string>
    <string name="image">image</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="chapter_1_title">Introduction to First Aid</string>
    <string name="chapter_2_title">Emergency Scene Management</string>
    <string name="chapter_3_title">Airway and Breathing Emergencies</string>
    <string name="chapter_4_title">Cardiovascular Emergencies and CPR</string>
    <string name="chapter_5_title">Wounds and Bleeding</string>
    <string name="chapter_6_title">Bone and Joint Injuries</string>
    <string name="chapter_7_title">Other First Aid Emergencies</string>
    <string name="chapter_8_title">Basic Life Support for HealthCare Providers</string>
    <string name="quiz">Begin Assessment</string>
    <string name="attempt">Review Your Answers</string>
    <string name="Terms_and_Conditions">
        I do not own any of the content in this app. All pages and information is taken from
        https://www.sja.ca/English/Courses-and-Training/Pages/firstaidbook.aspx. If you enjoy
        this material, please consider taking a Standard First Aid Course. All icons are
        taken from icons8.com and flaticon.com. \n\nThis app is meant
        for people who are interested in learning a bit about first aid and can never replace the
        knowledge gained from a practical first aid course. The information from this app should
        not empower any individual to perform any first aid they are not certified for.
        \n\nIf you have any comments or suggestions, please leave a comment and I will do my best
        to improve the app.
    </string>
</resources>