<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyFragment">
<LinearLayout

    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50sp"
        android:background="@drawable/button_chapters"
        android:padding="10sp"
        android:text="@string/chapter_1_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@drawable/button_chapters"
        android:focusable="true"
        android:padding="10sp"
        android:text="@string/chapter_2_title"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_chapters"
        android:padding="10sp"
        android:text="@string/chapter_3_title"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ch4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_chapters"
        android:padding="10sp"
        android:text="@string/chapter_4_title"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ch5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@drawable/button_chapters"
        android:focusable="true"
        android:padding="10sp"
        android:text="@string/chapter_5_title"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ch6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@drawable/button_chapters"
        android:focusable="true"
        android:padding="10sp"
        android:text="@string/chapter_6_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ch7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_chapters"
        android:padding="10sp"
        android:text="@string/chapter_7_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ch8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_chapters"
        android:padding="10sp"
        android:text="@string/chapter_8_title"
        android:textSize="18sp" />


</LinearLayout>
</ScrollView>