<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        tools:context=".PracticeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp"
            android:paddingBottom="100dp">

            <LinearLayout
                android:id="@+id/ch1_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:layout_weight="6"
                    android:text="@string/chapter_1_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ch2_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:text="@string/chapter_2_title"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ch3_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:text="@string/chapter_3_title"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ch4_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:text="@string/chapter_4_title"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ch5_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:text="@string/chapter_5_title"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ch6_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:text="@string/chapter_6_title"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ch7_quiz_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_subchapters"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:textSize="18sp"
                    android:text="@string/chapter_7_title"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_drop_down"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>